external/qt-everywhere-opensource-src-5.9.1/qtscxml/tests/auto/parser/data/syntaxErrors1.scxml.errors
:/tst_parser/data/syntaxErrors1.scxml:4:59: error: Unknown element transitifn
:/tst_parser/data/syntaxErrors1.scxml:11:64: error: Unknown element assigZ
:/tst_parser/data/syntaxErrors1.scxml:13:12: error: Error parsing SCXML file: Opening and ending tag mismatch.
