external/qt-everywhere-opensource-src-5.9.1/qtscxml/tests/auto/parser/data/syntaxErrors1.scxml
<?xml version="1.0" ?>
<scxml xmlns="http://www.w3.org/2005/07/scxml" version="1.0">
    <state id="begin">
        <transitifn event="OPER.MINUS" target="negated1" />
    </state>

    <state id="negated1">
    nameate>
    </state>
        <transition event="OP.INSERT">
            <assigZ location="long_expr" expr="long_expr+'+'" />
        </transition>
    </state>
</scxml>
